<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.MainActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@color/colorBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/menu_header_title"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:id="@+id/menu_recipe_backgroundcolor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/colorReceita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/menu_recipe_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintEnd_toStartOf="@+id/menu_recipe_button"
            app:layout_constraintStart_toStartOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_recipe_backgroundcolor"
            app:srcCompat="@drawable/recipe_img" />

        <Button
            android:id="@+id/menu_recipe_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#fff"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:paddingLeft="25dp"
            android:text="@string/menu_recipes_button_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#242424"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_recipe_backgroundcolor" />

        <View
            android:id="@+id/menu_expense_backgroundcolor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorDespesa"
            app:layout_constraintEnd_toEndOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintStart_toStartOf="@+id/menu_recipe_backgroundcolor"
            app:layout_constraintTop_toBottomOf="@+id/menu_recipe_backgroundcolor" />

        <ImageView
            android:id="@+id/menu_expense_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/menu_expense_backgroundcolor"
            app:layout_constraintEnd_toStartOf="@+id/menu_expense_button"
            app:layout_constraintStart_toStartOf="@+id/menu_expense_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_expense_backgroundcolor"
            app:srcCompat="@drawable/expense_img" />

        <Button
            android:id="@+id/menu_expense_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#fff"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/menu_expenses_button_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#242424"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_expense_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_expense_backgroundcolor" />

        <View
            android:id="@+id/menu_type_backgroundcolor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorTipo"
            app:layout_constraintEnd_toEndOf="@+id/menu_expense_backgroundcolor"
            app:layout_constraintTop_toBottomOf="@+id/menu_expense_backgroundcolor" />

        <ImageView
            android:id="@+id/menu_type_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/menu_type_backgroundcolor"
            app:layout_constraintEnd_toStartOf="@+id/menu_type_button"
            app:layout_constraintStart_toStartOf="@+id/menu_type_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_type_backgroundcolor"
            app:srcCompat="@drawable/type_img" />

        <Button
            android:id="@+id/menu_type_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#fff"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:text="@string/menu_types_button_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#242424"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_type_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_type_backgroundcolor" />

        <View
            android:id="@+id/menu_chart_backgroundcolor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGrafico"
            app:layout_constraintEnd_toEndOf="@+id/menu_type_backgroundcolor"
            app:layout_constraintTop_toBottomOf="@+id/menu_type_backgroundcolor" />

        <ImageView
            android:id="@+id/menu_chart_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/menu_chart_backgroundcolor"
            app:layout_constraintEnd_toStartOf="@+id/menu_chart_button"
            app:layout_constraintStart_toStartOf="@+id/menu_chart_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_chart_backgroundcolor"
            app:srcCompat="@drawable/chart_img" />

        <Button
            android:id="@+id/menu_chart_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#fff"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:text="@string/menu_charts_button_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#242424"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_chart_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_chart_backgroundcolor" />

        <View
            android:id="@+id/menu_mensal_data_backgroundcolor"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorDadosMensais"
            app:layout_constraintEnd_toEndOf="@+id/menu_chart_backgroundcolor"
            app:layout_constraintTop_toBottomOf="@+id/menu_chart_backgroundcolor" />

        <ImageView
            android:id="@+id/menu_mensal_data_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="@+id/menu_mensal_data_backgroundcolor"
            app:layout_constraintEnd_toStartOf="@+id/menu_mensal_data_button"
            app:layout_constraintStart_toStartOf="@+id/menu_mensal_data_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_mensal_data_backgroundcolor"
            app:srcCompat="@drawable/mensal_data_img" />

        <Button
            android:id="@+id/menu_mensal_data_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#fff"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/menu_mensal_data_button_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#242424"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_mensal_data_backgroundcolor"
            app:layout_constraintTop_toTopOf="@+id/menu_mensal_data_backgroundcolor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>